--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -656,7 +656,7 @@ video {
   margin: 1rem;
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   height: auto;
-  width: auto;
+  width: 8rem;
   max-width: 20rem;
   flex: 0 1 auto;
   -o-object-fit: cover;
